--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "node101",
+    "name": "node_auth",
     "version": "1.0.0",
     "description": "Learning basic concepts of node JS",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
-        "test": "node test"
+        "start:prod": "node server.js",
+        "start": "nodemon -L --inspect=0.0.0.0 server.js --ignore __tests__",
+        "test": "NODE_ENV=test & jest"
     },
     "author": "vhsn",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "pg": "^7.12.0",
         "sequelize": "^5.11.0"
     },
     "devDependencies": {
-        "sequelize-cli": "^5.5.0"
+        "jest": "^24.8.0",
+        "nodemon": "^1.19.1",
+        "sequelize-cli": "^5.5.0",
+        "sqlite3": "^4.0.9"
     }
 }
