--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "scripts": {
         "start:prod": "node server.js",
         "start": "nodemon -L --inspect=0.0.0.0 server.js --ignore __tests__",
-        "test": "NODE_ENV=test & jest"
+        "pretest": "NODE_ENV=test sequelize db:migrate",
+        "test": "NODE_ENV=test jest",
+        "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
     },
     "author": "vhsn",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "pg": "^7.12.0",
@@ -20,6 +23,7 @@
         "jest": "^24.8.0",
         "nodemon": "^1.19.1",
         "sequelize-cli": "^5.5.0",
-        "sqlite3": "^4.0.9"
+        "sqlite3": "^4.0.9",
+        "supertest": "^4.0.2"
     }
 }
